<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.task.fragment.TaskListFragment">

    <!-- Top Bar: Title + Logout -->
    <TextView
        android:id="@+id/textViewTasks"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/my_tasks"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonLogout"
        app:layout_constraintBottom_toBottomOf="@id/buttonLogout"
        android:layout_marginEnd="8dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textColor="@color/red"
        android:padding="5dp"
        app:strokeWidth="1dp"
        app:strokeColor="@color/red"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:paddingHorizontal="12dp"
        android:minHeight="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/searchInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/textViewTasks"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/searchEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Search task title"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- RecyclerView for tasks -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewTasks"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingBottom="80dp"
        app:layout_constraintTop_toBottomOf="@id/searchInputLayout"
        app:layout_constraintBottom_toTopOf="@id/buttonAddTask"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp" />

    <TextView
        android:id="@+id/no_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_result_for_your_task_title"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/textViewTasks"
        app:layout_constraintBottom_toTopOf="@id/buttonAddTask"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <!-- Empty state image and text -->
    <LinearLayout
        android:id="@+id/emptyStateLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/textViewTasks"
        app:layout_constraintBottom_toTopOf="@id/buttonAddTask"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <ImageView
            android:id="@+id/emptyStateImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/empty"
            android:contentDescription="No tasks" />

        <TextView
            android:id="@+id/emptyStateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="No tasks yet"
            android:textSize="16sp"
            android:textColor="#777"
            android:layout_marginTop="12dp" />
    </LinearLayout>

    <!-- Add Task Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonAddTask"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/add_new_task"
        android:layout_marginTop="12dp"
        app:cornerRadius="16dp"
        style="@style/Widget.MaterialComponents.Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
